2020-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to r-ci using focal and bspm

	* inst/examples/standard/GNUmakefile: Whitespace changes

2020-08-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a 'last commit' badge

2020-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.16

2020-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Small edits, added Debian badge

2020-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* DESCRIPTION (Author): Add Lance
	* DESCRIPTION (Description): Update Description

	[ all based on an initial contribution by Lance Bachmeier ]
	* src/RInside_C.cpp: New C-only embedding with five simple functions
	* inst/include/RInside_C.h: Interface to new C-only embedding
	* R/RInsidePaths.R (RInsideCFlags,CFlags): C flags
	* inst/examples/c_interface/: New example directory

	* .editorconfig: Added for standard editor behaviour

2019-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/tools/RInsideEnvVars.r: Add R_SESSION_INITIALIZED to excluded
	variables

2019-03-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.15

2019-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/RInside.cpp (initialize): Rewritten to use two (protected)
	temporary variable to avoid any chance of allocation races [rchk]

	* DESCRIPTION (Description): Edited linebreaks and wording

2018-12-26  Zé Vinícius  <jvmirca@gmail.com>

	* README.md: Correct typo in URL for Qt example

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Minor update to commented-out PPA for R 3.5

2018-06-14  François-David Collin  <fradav@gmail.com>

	* src/Makevars.win: Quote-protect path for Rscript

2017-08-17  Jonathon Love  <jon@thon.cc>

	* src/setenv/setenv.c: Extend backslash handling on Windows

2017-08-16  Jonathon Love  <jon@thon.cc>
