@@ -15,7 +15,7 @@ src/RInsideAutoloads.h
 src/RInsideEnvVars.h
 inst/include/RInsideAutoloads.h
 inst/include/RInsideEnvVars.h
-.travis.yml
+^\.travis\.yml$
 doxyfile
 inst/examples/standard/local
 local
@@ -23,3 +23,4 @@ local
 ^\.Rproj\.user$
 ^.*\.tar\.gz
 .editorconfig
+^\.github
