@@ -1,3 +1,7 @@
+2021-01-17  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-12-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Switch to r-ci using focal and bspm
